--- a/src/application/parts_dashbord.fxml
+++ b/src/application/parts_dashbord.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.parts_dashbord_controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.parts_dashbord_controller">
    <bottom>
       <HBox alignment="CENTER" prefHeight="390.0" prefWidth="930.0" BorderPane.alignment="CENTER">
          <children>
@@ -29,7 +29,7 @@
                           <columns>
                               <TableColumn fx:id="id" prefWidth="75.0" text="Id" />
                             <TableColumn fx:id="nom_col" prefWidth="142.0" text="Nom" />
-                            <TableColumn fx:id="parts_table" prefWidth="219.0" text="Description" />
+                            <TableColumn fx:id="desc_col" prefWidth="219.0" text="Description" />
                               <TableColumn fx:id="quntite_col" prefWidth="88.0" text="Quntite" />
                               <TableColumn fx:id="prix_col" prefWidth="75.0" text="Prix" />
                           </columns>
@@ -118,7 +118,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="add_btn" layoutX="120.0" layoutY="15.0" mnemonicParsing="false" onAction="#add_parts" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@part_style.css" text="Ajouter">
+                  <Button fx:id="add_btn" layoutX="118.0" layoutY="18.0" mnemonicParsing="false" onAction="#add_parts" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@part_style.css" text="Ajouter">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -130,7 +130,7 @@
                         </DropShadow>
                      </effect>
                   </Button>
-                  <Button fx:id="mod_btn" layoutX="14.0" layoutY="15.0" mnemonicParsing="false" onAction="#mod_parts" prefHeight="30.0" prefWidth="100.0" styleClass="btn_mod" stylesheets="@part_style.css" text="Modifier">
+                  <Button fx:id="mod_btn" layoutX="7.0" layoutY="18.0" mnemonicParsing="false" onAction="#mod_parts" prefHeight="30.0" prefWidth="100.0" styleClass="btn_mod" stylesheets="@part_style.css" text="Modifier">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
