--- a/bin/application/parts_dashbord.fxml
+++ b/bin/application/parts_dashbord.fxml
@@ -17,21 +17,25 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.parts_dashbord_controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.parts_dashbord_controller">
+
    <bottom>
       <HBox alignment="CENTER" prefHeight="390.0" prefWidth="930.0" BorderPane.alignment="CENTER">
          <children>
-            <ScrollPane prefHeight="390.0" prefWidth="900.0">
+            <ScrollPane prefHeight="390.0" prefWidth="850.0" stylesheets="@tablestyle.css">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="390.0" prefWidth="900.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="390.0" prefWidth="850.0" style="-fx-border-width: 0; -fx-border-color: transparent;">
                      <children>
-                        <TableView fx:id="parts_table" prefHeight="390.0" prefWidth="900.0">
+                        <TableView fx:id="parts_table" prefHeight="390.0" prefWidth="850.0" stylesheets="@tablestyle.css">
                           <columns>
                               <TableColumn fx:id="id" prefWidth="75.0" text="Id" />
                             <TableColumn fx:id="nom_col" prefWidth="142.0" text="Nom" />
-                            <TableColumn fx:id="desc_col" prefWidth="219.0" text="Description" />
+<!--                              <TableColumn fx:id="parts_table" prefWidth="219.0" text="Description" />
+ --> 
                               <TableColumn fx:id="quntite_col" prefWidth="88.0" text="Quntite" />
                               <TableColumn fx:id="prix_col" prefWidth="75.0" text="Prix" />
+                            <TableColumn fx:id="desc_col" prefWidth="219.0" text="Description" />
+                              <TableColumn prefWidth="169.0" text="Action" />
                           </columns>
                         </TableView>
                      </children>
@@ -56,7 +60,22 @@
         </rowConstraints>
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <children>
+                  <Button fx:id="selec_btn" layoutX="112.0" layoutY="18.0" mnemonicParsing="false" onAction="#selection_parts" prefHeight="30.0" prefWidth="106.0" styleClass="btn_mod" stylesheets="@part_style.css" text="Sélection">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color red="0.6105263233184814" green="0.6105263233184814" blue="0.6105263233184814" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                  </Button>
+                  <Button fx:id="deleter_btn" layoutX="8.0" layoutY="21.0" mnemonicParsing="false" onAction="#dlt_part" text="Deleter" />
+               </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <children>
                   <TextField fx:id="price" layoutX="71.0" layoutY="18.0" />
