--- a/bin/application/Viewfxml/add_employe_dashbord.fxml
+++ b/bin/application/Viewfxml/add_employe_dashbord.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<!-- <?import io.github.palexdev.materialfx.controls.MFXButton?> -->
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -51,7 +51,7 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Button>
-                  <MFXButton fx:id="delete_btn" layoutX="75.0" layoutY="18.0" prefHeight="30.0" prefWidth="100.0" styleClass="btn_mod" stylesheets="@add_employe_style.css" text="Supprime">
+                  <!-- <MFXButton fx:id="delete_btn" layoutX="75.0" layoutY="18.0" prefHeight="30.0" prefWidth="100.0" styleClass="btn_mod" stylesheets="@add_employe_style.css" text="Supprime">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
@@ -60,7 +60,7 @@
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
-                  </MFXButton>
+                  </MFXButton> -->
                </children>
             </Pane>
          </children>
